// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`compile() empty values 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [],
  "spec": Object {
    "base": Object {
      "color": null,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() empty values 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [],
  "spec": Object {
    "base": Object {
      "color": undefined,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() empty values 3`] = `
Object {
  "id": "<HASH>",
  "rules": Array [],
  "spec": Object {
    "base": Object {
      "color": "",
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() empty values 4`] = `
Object {
  "id": "<HASH>",
  "rules": Array [],
  "spec": Object {
    "base": Object {
      "color": false,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() marginStart/marginEnd 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "margin-left: 12px;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "margin-right: 12px;",
      "selector": "Component-<HASH>.RTL",
    },
  ],
  "spec": Object {
    "base": Object {
      "marginStart": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() marginStart/marginEnd 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "margin-right: 12px;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "margin-left: 12px;",
      "selector": "Component-<HASH>.RTL",
    },
  ],
  "spec": Object {
    "base": Object {
      "marginEnd": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() marginVertical/marginHorizontal 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "margin-top: 12px;
margin-bottom: 12px;",
      "selector": "Component-<HASH>",
    },
  ],
  "spec": Object {
    "base": Object {
      "marginVertical": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() marginVertical/marginHorizontal 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "margin-left: 12px;
margin-right: 12px;",
      "selector": "Component-<HASH>",
    },
  ],
  "spec": Object {
    "base": Object {
      "marginHorizontal": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() paddingStart/paddingEnd 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "padding-left: 12px;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "padding-right: 12px;",
      "selector": "Component-<HASH>.RTL",
    },
  ],
  "spec": Object {
    "base": Object {
      "paddingStart": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() paddingStart/paddingEnd 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "padding-right: 12px;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "padding-left: 12px;",
      "selector": "Component-<HASH>.RTL",
    },
  ],
  "spec": Object {
    "base": Object {
      "paddingEnd": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() paddingVertical/paddingHorizontal 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "padding-top: 12px;
padding-bottom: 12px;",
      "selector": "Component-<HASH>",
    },
  ],
  "spec": Object {
    "base": Object {
      "paddingVertical": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() paddingVertical/paddingHorizontal 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "padding-left: 12px;
padding-right: 12px;",
      "selector": "Component-<HASH>",
    },
  ],
  "spec": Object {
    "base": Object {
      "paddingHorizontal": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() startOffset/endOffset 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "left: 12px;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "right: 12px;",
      "selector": "Component-<HASH>.RTL",
    },
  ],
  "spec": Object {
    "base": Object {
      "startOffset": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() startOffset/endOffset 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "right: 12px;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "left: 12px;",
      "selector": "Component-<HASH>.RTL",
    },
  ],
  "spec": Object {
    "base": Object {
      "endOffset": 12,
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() variants 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "color: red;",
      "selector": "Component-<HASH>",
    },
  ],
  "spec": Object {
    "base": Object {
      "color": "red",
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() variants 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "color: red;",
      "selector": "Component-something-<HASH>",
    },
  ],
  "spec": Object {
    "something": Object {
      "color": "red",
    },
  },
  "variantToClassName": Object {
    "something": "Component-something-<HASH>",
  },
}
`;

exports[`compile() w/ pseudoclasses 1`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "color: red;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "color: black;",
      "selector": "Component-<HASH>:hover",
    },
  ],
  "spec": Object {
    "base": Object {
      "color": "red",
      "hover": Object {
        "color": "black",
      },
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() w/ pseudoclasses 2`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "color: red;",
      "selector": "Component-<HASH>",
    },
    Object {
      "props": "color: black;",
      "selector": "Component-<HASH>:hover",
    },
    Object {
      "props": "color: yellow;",
      "selector": "Component-<HASH>:hover:focus",
    },
  ],
  "spec": Object {
    "base": Object {
      "color": "red",
      "hover": Object {
        "color": "black",
        "focus": Object {
          "color": "yellow",
        },
      },
    },
  },
  "variantToClassName": Object {
    "base": "Component-<HASH>",
  },
}
`;

exports[`compile() w/ pseudoclasses 3`] = `
Object {
  "id": "<HASH>",
  "rules": Array [
    Object {
      "props": "color: red;",
      "selector": "Component-something-<HASH>",
    },
    Object {
      "props": "color: black;",
      "selector": "Component-something-<HASH>:hover",
    },
  ],
  "spec": Object {
    "something": Object {
      "color": "red",
      "hover": Object {
        "color": "black",
      },
    },
  },
  "variantToClassName": Object {
    "something": "Component-something-<HASH>",
  },
}
`;
